--- a/db/config.json
+++ b/db/config.json
@@ -1,5 +1,11 @@
 {
     "quizes":[
+         {
+            "subj":"riph",
+            "name":"The Readings In Philippine History",
+            "exam":"midterm",
+            "url":"/riph.json"
+        },     
         {
             "subj":"webdev",
             "name":"Web Development",
