--- a/db/config.json
+++ b/db/config.json
@@ -1,22 +1,22 @@
 {
     "quizes":[
-         /*{
-            "subj":"riph",
-            "name":"The Readings In Philippine History",
-            "exam":"midterm",
-            "url":"https://jervx.github.io/JervxApplicationDeploy/db/riph.json"
-        },     
-        {
-            "subj":"webdev",
-            "name":"Web Development",
-            "exam":"midterm",
-            "url":"https://jervx.github.io/JervxApplicationDeploy/db/webdev.json"
-        },
-        {
-            "subj":"inpr",
-            "name":"Intermediate Programming",
-            "exam":"midterm",
-            "url":"https://jervx.github.io/JervxApplicationDeploy/db/inpr.json"
-        }*/
+         //{
+         //   "subj":"riph",
+         //   "name":"The Readings In Philippine History",
+         //   "exam":"midterm",
+        //    "url":"https://jervx.github.io/JervxApplicationDeploy/db/riph.json"
+        //},     
+        //{
+        //    "subj":"webdev",
+        //    "name":"Web Development",
+        //    "exam":"midterm",
+        //    "url":"https://jervx.github.io/JervxApplicationDeploy/db/webdev.json"
+       // },
+        //{
+          //  "subj":"inpr",
+          //  "name":"Intermediate Programming",
+        //    "exam":"midterm",
+      //      "url":"https://jervx.github.io/JervxApplicationDeploy/db/inpr.json"
+       // }
     ]
 }
