--- a/db/config.json
+++ b/db/config.json
@@ -1,5 +1,6 @@
 {
     "quizes":[
-         
+            "name":"Riph",
+            "url":"https://jervx.github.io/JervxApplicationDeploy/inpr.json";
         ]
 }
