--- a/db/config.json
+++ b/db/config.json
@@ -2,7 +2,7 @@
     "quizes":[
             {
                 "name":"Riph",
-                "url":"https://jervx.github.io/JervxApplicationDeploy/inpr.json";
+                "url":"https://jervx.github.io/JervxApplicationDeploy/inpr.json"
             }
         ]
 }
